# DevStylerC-Course

./: Administration.cpp  Administration.h  Box.h  CMakeLists.txt  Date.cpp  Date.h  Refer.cpp  Refer.h  Team.cpp  User.cpp  main.cpp
Account Polymorphisam task/: Account.cpp  Account.h  CMakeLists.txt  CheckingAccaount.cpp  CheckingAccount.h  SavingAccount.cpp  SavingAccount.h  main.cpp
CardShuffle/: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  main.cpp
Cinema C++/: CMakeLists.txt  Cinema.cpp  Cinema.h  Hall.cpp  Hall.h  MovieFinder.cpp  MovieFinder.h  Screening.cpp  Screening.h  main.cpp
Exam/Employee Managment System/: CMakeLists.txt  Department.cpp  Department.h  Employee.cpp  Employee.h  main.cpp
ExamPerpBook/: Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Genre.cpp  Genre.h  Library.cpp  Library.h  main.cpp
ExamTasksHomework/: CMakeLists.txt
ExamTasksHomework/InheritanceAbstraction/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  main.cpp  shape.cpp  shape.h
Exercise Map & list/: CMakeLists.txt  main.cpp
FootboolFederation/: Administration.cpp  Administration.h  CMakeLists.txt  FanBase.cpp  FanBase.h  Match.cpp  Match.h  Rankings.cpp  Rankings.h  Refer.cpp  Schedule.cpp  Schedule.h  Team.cpp  Team.h  User.cpp  User.h  main.cpp
LuibraryBookManagment/: Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Genre.cpp  Genre.h  LibraryManagment.cpp  LibraryManagment.h  ReferenceBook.cpp  ReferenceBook.h  RegularBook.cpp  RegularBook.h  main.cpp
OOP Polymorphisam Exercise 2D-3D shapes/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  ThreeDemensionalShape.cpp  ThreeDemensionalShape.h  TwoDimensionalShape.cpp  TwoDimensionalShape.h  main.cpp
ObjectsC++/: CMakeLists.txt  Class.cpp  Class.h  Discipline.cpp  Discipline.h  School.cpp  School.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
OnlineShopPolymorphisamAbstraction/: Alcoholic.cpp  Alcoholic.h  CMakeLists.txt  Drinks.cpp  Drinks.h  NonAlcoholic.cpp  NonAlcoholic.h  Orders.cpp  Orders.h  TypeEnum.cpp  TypeEnum.h  User.cpp  User.h  main.cpp
OperatorOverload/: Box.cpp  Date.cpp  main.cpp
Pacage Inheritance/: CMakeLists.txt  OverNightPackage.cpp  OverNightPackage.h  Package.cpp  Package.h  TwoDayPackage.cpp  TwoDayPackage.h  main.cpp
Rectangle Operator Overload/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  main.cpp
RentCarTaskInheritance/: CMakeLists.txt  Car.cpp  Car.h  FamilyCar.cpp  FamilyCar.h  LuxuryCars.cpp  LuxuryCars.h  main.cpp
SDL/: CMakeLists.txt  Game.cpp  Game.h  TextureManager.cpp  TextureManager.h  main.c  main.cpp
ToDoList/: CMakeLists.txt  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Task.cpp  Task.h  User.cpp  User.h  main.cpp
XML/: CMakeLists.txt  employees.xml  pugixml.cpp
XMLfix/: CMakeLists.txt  Employee.cpp  Employee.h  Workstation.cpp  Workstation.h  main.cpp  pugixml.cpp
objects C++/: CMakeLists.txt  car.cpp  carService.h
(+23 files in other folders)
